cmake: add note for local testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ if(VOTCA_PATH AND VOTCA_SHARE AND VOTCA_CSG_INVERSE AND ENABLE_TESTING)
     endif()
     set_tests_properties(${TESTNAME} PROPERTIES ENVIRONMENT "CSG_RUNTEST=yes;VOTCASHARE=${VOTCA_SHARE};CSG_MDRUN_STEPS=${CSG_MDRUN_STEPS};PATH=${VOTCA_PATH}:$ENV{PATH}")
   endforeach(DIR ${DIRS})
+  message(STATUS "Use VOTCASHARE=${VOTCA_SHARE} PATH=${VOTCA_PATH} for out-of-cmake testing")
 elseif(ENABLE_TESTING)
 	message(FATAL_ERROR "We need VOTCA_PATH, VOTCA_SHARE and VOTCA_CSG_INVERSE set for testing!")
 endif()
