cmake: add NPROCS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ option(ENABLE_TESTING "Build and copy testing stuff" OFF)
 if(VOTCA_PATH AND VOTCA_SHARE AND VOTCA_CSG_INVERSE AND ENABLE_TESTING)
   enable_testing()
   find_package(MDRUN_MPI)
+  set(NPROCS 4 CACHE STRING "# processes for testing")
   file(GLOB_RECURSE FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} settings.xml)
   foreach(DIR ${FILES})
     if(DIR MATCHES "(lammps|espresso|dlpoly|hoomd|atomistic|single_chain)")
@@ -45,7 +46,8 @@ if(VOTCA_PATH AND VOTCA_SHARE AND VOTCA_CSG_INVERSE AND ENABLE_TESTING)
       set(CSG_MDRUN_STEPS 2500)
     endif()
     if(DIR MATCHES "gromacs-(multi|remd)")
-      set_tests_properties(${TESTNAME} PROPERTIES ENVIRONMENT "CSG_RUNTEST=yes;VOTCASHARE=${VOTCA_SHARE};CSG_MDRUN_STEPS=${CSG_MDRUN_STEPS};PATH=${VOTCA_PATH}:$ENV{PATH};CSG_MDRUN_CMD=${MDRUN_MPI_EXECUTABLE}")
+      set_property(TEST ${TESTNAME} PROPERTY ENVIRONMENT "CSG_RUNTEST=yes;VOTCASHARE=${VOTCA_SHARE};CSG_MDRUN_STEPS=${CSG_MDRUN_STEPS};PATH=${VOTCA_PATH}:$ENV{PATH}"
+	      "CSG_MDRUN_CMD=mpirun -np ${NPROCS} ${MDRUN_MPI_EXECUTABLE}")
     else()
       set_tests_properties(${TESTNAME} PROPERTIES ENVIRONMENT "CSG_RUNTEST=yes;VOTCASHARE=${VOTCA_SHARE};CSG_MDRUN_STEPS=${CSG_MDRUN_STEPS};PATH=${VOTCA_PATH}:$ENV{PATH}")
     endif()
