--- a/src/libtools/libvotca_tools.pc.in
+++ b/src/libtools/libvotca_tools.pc.in
@@ -5,7 +5,7 @@ includedir=${prefix}/include
 Name: libvotca_tools
 Description: basic tools of the votca package
 URL: http://www.votca.org
-Version: @VERSION@
+Version: @PROJECT_VERSION@
 Requires: @SQLITE3_PKG@ @GSL_PKG@ @EIGEN_PKG@ @FFTW3_PKG@
 Libs: -L${libdir} -lvotca_tools @EXPAT_LIBS_PKG@ @BOOST_LIBS_PKG@ @THREAD_LIBRARIES@
 Libs.private: -lm
