--- a/src/libcsg/libvotca_csg.pc.in
+++ b/src/libcsg/libvotca_csg.pc.in
@@ -5,7 +5,7 @@ includedir=${prefix}/include
 Name: libvotca_csg
 Description: csg functions of the votca package
 URL: http://www.votca.org
-Version: @VERSION@
+Version: @PROJECT_VERSION@
 Requires: libvotca_tools @GROMACS_PKG@
 Libs: -L${libdir} -lvotca_csg @BOOST_LIBS_PKG@ @THREAD_LIBRARIES@
 Libs.private: -lm
