--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,6 @@ addons:
       - doxygen
       - graphviz
       - ghostscript
-      - python-numpy
       - gnuplot-nox
       - octave
 
@@ -57,9 +56,10 @@ before_script:
     fi
   - if [[ ${MAN} ]]; then git clone --depth=1 https://github.com/votca/doxygen.git "$HOME/votca/src/devdoc"; fi 
   - if [[ ${GVER} ]]; then export CC=gcc-${GVER}; export CXX=g++-${GVER}; fi
+  - pip install --user numpy
 
 script:
-  - PATH="$HOME/hdf5:$PATH" ./build.sh -Wu $([[ ${TRAVIS_BRANCH} = stable ]] || echo "--dev") --prefix "$HOME/votca"
+  - PATH="$HOME/hdf5:$PATH" ./build.sh -Wu --prefix "$HOME/votca"
     ${TYPE:+-DCMAKE_BUILD_TYPE=${TYPE}}
     ${TEST:+--runtest=$TEST} ${WERROR:+--warn-to-errors} -DWITH_H5MD=ON ${MINIMAL:+--minimal} ${MAN:+--devdoc}
     ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} ${WALL:+--Wall} ${GMX_VERSION:+--gmx-release ${GMX_VERSION}}
