--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,6 @@ addons:
       - libhdf5-serial-dev
       - pkg-config
       - pgf
-      - python-lxml
       - texlive-fonts-recommended
       - texlive-latex-extra
       - texlive-latex-recommended
@@ -40,7 +39,6 @@ addons:
       - doxygen
       - graphviz
       - ghostscript
-      - python-numpy
       - gnuplot-nox
       - octave
 
@@ -52,7 +50,7 @@ env:
     - GVER=4.8
   matrix: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
     - XTP=yes WERROR=yes J=4 TYPE=Release
-    - XTP=yes WALL=yes J=4 XTP_MAN=yes TYPE=Release
+    - XTP=yes WALL=yes J=4 XTP_MAN=yes BDIR=. TYPE=Release
     - XTP=yes WERROR=yes J=4 BDIR=build TYPE=Debug
     - XTP=yes WALL=yes J=4 BDIR=build TYPE=Debug
 
@@ -66,9 +64,10 @@ before_script:
     fi
   - if [[ ${XTP_MAN} ]]; then git clone --depth=1 https://github.com/votca/doxygen.git "$HOME/votca/src/devdoc"; fi 
   - if [[ ${GVER} ]]; then export CC=gcc-${GVER}; export CXX=g++-${GVER}; fi
+  - pip install --user numpy lxml
 
 script:
-  - PATH="$HOME/hdf5:$PATH" ./build.sh -Wu $([[ ${TRAVIS_BRANCH} = stable ]] || echo "--dev") --prefix "$HOME/votca"
+  - PATH="$HOME/hdf5:$PATH" ./build.sh -Wu --prefix "$HOME/votca"
     ${TYPE:+-DCMAKE_BUILD_TYPE=${TYPE}} ${XTP_MAN:+--build-manual}
     ${TEST:+--runtest=$TEST} ${WERROR:+--warn-to-errors} -DWITH_H5MD=ON ${MINIMAL:+--minimal} ${MAN:+--devdoc}
     ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} ${WALL:+--Wall} ${GMX_VERSION:+--gmx-release ${GMX_VERSION}}
