cmake: switch to GNUInstallDirs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,15 +38,7 @@ endif()
 # User input options                                                   #
 ########################################################################
 option(BUILD_SHARED_LIBS "Build shared libs" ON)
-if (NOT DEFINED LIB)
-  set(LIB "lib")
-endif(NOT DEFINED LIB)
-if (NOT DEFINED MAN)
-  set(MAN "share/man")
-endif(NOT DEFINED MAN)
-if (NOT DEFINED DATA)
-  set(DATA "share/votca")
-endif(NOT DEFINED DATA)
+include(GNUInstallDirs)
 
 option(ENABLE_TESTING "Build and enable testing stuff" OFF)
 if(ENABLE_TESTING)
@@ -115,7 +107,7 @@ if(MKL_FOUND)
   set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES "${CMAKE_CURRENT_BINARY_DIR}/intel/src/intel")
   include_directories(${MKL_BOOST_INCLUDE_DIR})
   set(MKL_HEADERS "${MKL_BOOST_INCLUDE_DIR}/mkl_boost_ublas_matrix_prod.hpp" "${MKL_BOOST_INCLUDE_DIR}/mkl_boost_ublas_gemm.hpp"  )
-  install(FILES ${MKL_HEADERS} DESTINATION include/votca/tools)
+  install(FILES ${MKL_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/votca/tools)
 endif(MKL_FOUND)
 
 option(WITH_FFTW "Use FFTW3, disabling leads to reduced functionality!" ON)
