--- a/include/votca/tools/CMakeLists.txt
+++ b/include/votca/tools/CMakeLists.txt
@@ -11,8 +11,4 @@ if (NOT GSL_FOUND OR MKL_FOUND)
     list(REMOVE_ITEM VOTCA_HEADERS ${NOT_VOTCA_HEADERS})
 endif (NOT GSL_FOUND OR MKL_FOUND)
 
-       
-
-
-
-install(FILES ${VOTCA_HEADERS} DESTINATION include/votca/tools)
+install(FILES ${VOTCA_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/votca/tools)
