--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -20,5 +20,5 @@ if (WITH_RC_FILES)
   configure_file(VOTCARC.csh.in ${CMAKE_CURRENT_BINARY_DIR}/VOTCARC.csh @ONLY)
   configure_file(VOTCARC.bash.in ${CMAKE_CURRENT_BINARY_DIR}/VOTCARC.bash @ONLY)
   install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/VOTCARC.csh
-    ${CMAKE_CURRENT_BINARY_DIR}/VOTCARC.bash DESTINATION bin)
+    ${CMAKE_CURRENT_BINARY_DIR}/VOTCARC.bash DESTINATION ${CMAKE_INSTALL_BINDIR})
 endif (WITH_RC_FILES)
