--- a/src/libtools/libvotca_tools.pc.in
+++ b/src/libtools/libvotca_tools.pc.in
@@ -1,6 +1,5 @@
-prefix=@CMAKE_INSTALL_PREFIX@
-libdir=${prefix}/@LIB@
-includedir=${prefix}/include
+libdir=@CMAKE_INSTALL_FULL_LIBDIR@
+includedir=@CMAKE_INSTALL_FULL_INCLUDEDIR@
 
 Name: libvotca_tools
 Description: basic tools of the votca package
