--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -19,7 +19,7 @@ foreach(SCRIPT csg_call csg_inverse)
     add_custom_command(TARGET ${SCRIPT}_build POST_BUILD COMMAND chmod +x ${SCRIPT})
   endif(ENABLE_TESTING OR BUILD_CSG_MANUAL)
   set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${SCRIPT})
-  install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION bin)
+  install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION ${CMAKE_INSTALL_BINDIR})
   if (TXT2TAGS_FOUND AND BASH)
     add_custom_command(OUTPUT ${SCRIPT}.man 
       COMMAND VOTCASHARE=${CMAKE_SOURCE_DIR}/share ${BASH} ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} --help > ${SCRIPT}.help
@@ -28,10 +28,10 @@ foreach(SCRIPT csg_call csg_inverse)
       DEPENDS help2t2t_build ${SCRIPT})
     add_custom_target(${SCRIPT}_manpage DEPENDS ${SCRIPT}.man)
     add_dependencies(manpages ${SCRIPT}_manpage)
-    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}.man DESTINATION ${MAN}/man1 RENAME ${SCRIPT}.1)
+    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}.man DESTINATION ${CMAKE_INSTALL_MANDIR}/man1 RENAME ${SCRIPT}.1)
     set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${SCRIPT}.help ${SCRIPT}.t2t)
   endif(TXT2TAGS_FOUND AND BASH)
 endforeach(SCRIPT)
 
 option(WITH_RC_FILES "Install votca rc files, no need when installing under /usr" ON)
-install(FILES csg-completion.bash DESTINATION ${DATA}/rc)
+install(FILES csg-completion.bash DESTINATION ${CMAKE_INSTALL_DATADIR}/votca/rc)
