cmake: enable lammps testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,13 +11,17 @@ option(ENABLE_TESTING "Build and copy testing stuff" OFF)
 if(VOTCA_PATH AND VOTCA_SHARE AND VOTCA_CSG_INVERSE AND ENABLE_TESTING)
   enable_testing()
   find_package(MDRUN_MPI)
+  find_package(LMP)
   set(NPROCS 4 CACHE STRING "# processes for testing")
   file(GLOB_RECURSE FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} settings.xml)
   foreach(DIR ${FILES})
-    if(DIR MATCHES "(lammps|espresso|dlpoly|hoomd|atomistic|single_chain)")
+    if(DIR MATCHES "(espresso|dlpoly|hoomd|atomistic|single_chain)")
       continue()
     endif()
     if(NOT MDRUN_MPI_FOUND AND DIR MATCHES "gromacs-(multi|remd)")
+      continue()
+    endif()
+    if(NOT LMP_FOUND AND DIR MATCHES "lammps")
       continue()
     endif()
     string(REGEX MATCH ^.*/ DIR ${DIR})
