--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,11 +42,11 @@ if(VOTCA_PATH AND VOTCA_SHARE AND VOTCA_CSG_INVERSE AND ENABLE_TESTING)
     # run tests for csg (to test csg) and tools (coverage) as well
     set_tests_properties(${TESTNAME} PROPERTIES LABELS "csg-tutorials;csg;tools;votca")
     set(CSG_MDRUN_STEPS 500)
-    if(DIR MATCHES "/(imc|realtime)$")
+    if(DIR MATCHES "/(imc)($|_)")
       set(CSG_MDRUN_STEPS 5000)
     elseif(DIR MATCHES "/cma/")
       set(CSG_MDRUN_STEPS 5000)
-    elseif(DIR MATCHES "/re$")
+    elseif(DIR MATCHES "/re($|_)")
       set(CSG_MDRUN_STEPS 2500)
     endif()
     if(DIR MATCHES "gromacs-(multi|remd)")
