--- a/.travis.yml
+++ b/.travis.yml
@@ -11,22 +11,25 @@ services:
 
 env:
   matrix:
-    - TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -E \(imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=Debug
+    - TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -E \(_imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=Debug
     - TESTING=OFF CMAKE_BUILD_TYPE=Debug   WERROR=yes
-    - TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -E \(imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=Release DOCKERHUB=yes
-    - DISTRO=fedora_gmx5.1 TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -E \(imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=Release
-    - DISTRO=fedora_gmx9999 TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -E \(imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=Release
-    - DISTRO=ubuntu TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -E \(imc\|spce_cma_simple\|hexane_ibi\|propane_ibi\)" CMAKE_BUILD_TYPE=Release
+    - TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -E \(_imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=Release DOCKERHUB=yes
+    - DISTRO=fedora_gmx5.1 TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -E \(_imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=Release
+    - DISTRO=fedora_gmx9999 TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -E \(_imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=Release
+    - DISTRO=ubuntu TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -E \(_imc\|spce_cma_simple\|hexane_ibi\|propane_ibi\)" CMAKE_BUILD_TYPE=Release
     - TESTING=OFF CMAKE_BUILD_TYPE=Release WERROR=yes
 #useless for votca/votca, but for coverage of individual modules
-    - TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -E \(imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=None COVERAGE=yes
+    - TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -E \(_imc\|spce_cma_simple\|_re\)" CMAKE_BUILD_TYPE=None COVERAGE=yes
+    - TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -R _re" CMAKE_BUILD_TYPE=None COVERAGE=yes
     - TESTING=OFF CMAKE_BUILD_TYPE=Release DOXYGEN=yes
     - TESTING=OFF CMAKE_BUILD_TYPE=Release MINIMAL=yes
 
 matrix:
   exclude:
   - compiler: clang #taking too long
-    env: TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -E \(imc\|spce_cma_simple\)" CMAKE_BUILD_TYPE=None COVERAGE=yes
+    env: TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -E \(_imc\|spce_cma_simple\|_re\)" CMAKE_BUILD_TYPE=None COVERAGE=yes
+  - compiler: clang #taking too long
+    env: TESTING=ON TESTOPTS="-L ${TRAVIS_REPO_SLUG#*/} -R _re" CMAKE_BUILD_TYPE=None COVERAGE=yes
   - compiler: clang #no new info when using clang
     env: TESTING=OFF CMAKE_BUILD_TYPE=Release DOXYGEN=yes 
 
@@ -88,7 +91,7 @@ after_success:
         git push git@github.com:votca/doxygen.git gh-pages;
       else
         git status;
-        git diff --cached --no-color | head -n 500;
+        git diff --cached --no-color | head -c 1k;
       fi;
     fi
 
