--- a/scripts/VOTCARC.bash.in
+++ b/scripts/VOTCARC.bash.in
@@ -27,14 +27,14 @@ VOTCASHARE="@CMAKE_INSTALL_FULL_DATADIR@/votca"
 export PATH MANPATH @LD_LIBRARY_PATH@ PKG_CONFIG_PATH VOTCASHARE
 
 #votca rc files
-for rc in "${VOTCASHARE}"/votca/rc/*rc.bash; do
+for rc in "${VOTCASHARE}"/rc/*rc.bash; do
   [ -r "$rc" ] && . "$rc"
 done
 unset rc
 
 #bash completion
 if [ -n "$BASH_VERSION" ]; then 
-  for comp in "${VOTCASHARE}"/votca/rc/*completion.bash; do
+  for comp in "${VOTCASHARE}"/rc/*completion.bash; do
     [ -r "$comp" ] && source "$comp"
   done
   unset comp
