.travis.yml: add gmx-2018 builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,8 @@ env:
     - WALL=yes GMX_VERSION=5.0 GMX_DOUBLE=yes J=4
     - WALL=yes GMX_VERSION=5.1 J=4
     - WALL=yes GMX_VERSION=5.1 GMX_DOUBLE=yes J=4
+    - WALL=yes GMX_VERSION=2018 J=4
+    - WALL=yes GMX_VERSION=2018 GMX_DOUBLE=yes J=4
     - WALL=yes GMX_VERSION=9999 J=4
     - WALL=yes GMX_VERSION=9999 GMX_DOUBLE=yes J=4
     - MINIMAL=yes J=4
