Revert "csg_defaults.xml: drop support for <gmx-5.1"
This reverts commit 01491f00f0c731606a29e852ecca082c73b70f7f.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ share/doc/html/*
 share/man/*.man
 share/template/template_serial
 share/template/template_threaded
+share/xml/csg_defaults.xml
 src/csg_boltzmann/csg_boltzmann
 src/libcsg/version.cc
 src/tools/csg_dump
