--- a/share/xml/CMakeLists.txt
+++ b/share/xml/CMakeLists.txt
@@ -1,2 +1,14 @@
+set(CSG_DEFAULTS csg_defaults.xml)
+
 file(GLOB_RECURSE VOTCA_XML *.xml)
+file(GLOB_RECURSE NOT_VOTCA_XML ${CSG_DEFAULTS})
+list(REMOVE_ITEM VOTCA_XML ${NOT_VOTCA_XML})
 install(FILES ${VOTCA_XML} DESTINATION ${CMAKE_INSTALL_DATADIR}/votca/xml)
+
+set(MDRUN "gmx mdrun")
+set(G_ENERGY "gmx energy")
+set(GROMPP "gmx grompp")
+set(G_TRJCAT "gmx trjcat")
+
+configure_file(${CSG_DEFAULTS}.in ${CMAKE_CURRENT_BINARY_DIR}/${CSG_DEFAULTS} @ONLY)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CSG_DEFAULTS} DESTINATION ${DATA}/xml)
