cmake: auto-detect gmx binary

--- a/share/xml/CMakeLists.txt
+++ b/share/xml/CMakeLists.txt
@@ -5,10 +5,15 @@ file(GLOB_RECURSE NOT_VOTCA_XML ${CSG_DEFAULTS})
 list(REMOVE_ITEM VOTCA_XML ${NOT_VOTCA_XML})
 install(FILES ${VOTCA_XML} DESTINATION ${CMAKE_INSTALL_DATADIR}/votca/xml)
 
-set(MDRUN "gmx mdrun")
-set(G_ENERGY "gmx energy")
-set(GROMPP "gmx grompp")
-set(G_TRJCAT "gmx trjcat")
+find_program(GMX_EXECUTABLE gmx_d gmx)
+find_package_handle_standard_args(GMX REQUIRED_VARS GMX_EXECUTABLE)
+if(NOT GMX_FOUND)
+  set(GMX_EXECUTABLE "gmx")
+endif()
+set(MDRUN "${GMX_EXECUTABLE} mdrun")
+set(G_ENERGY "${GMX_EXECUTABLE} energy")
+set(GROMPP "${GMX_EXECUTABLE} grompp")
+set(G_TRJCAT "${GMX_EXECUTABLE} trjcat")
 
 configure_file(${CSG_DEFAULTS}.in ${CMAKE_CURRENT_BINARY_DIR}/${CSG_DEFAULTS} @ONLY)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CSG_DEFAULTS} DESTINATION ${DATA}/xml)
