cmake: fix for out-ouf-source build

--- a/share/xml/CMakeLists.txt
+++ b/share/xml/CMakeLists.txt
@@ -2,7 +2,9 @@ set(CSG_DEFAULTS csg_defaults.xml)
 
 file(GLOB_RECURSE VOTCA_XML *.xml)
 file(GLOB_RECURSE NOT_VOTCA_XML ${CSG_DEFAULTS})
-list(REMOVE_ITEM VOTCA_XML ${NOT_VOTCA_XML})
+if(NOT_VOTCA_XML)
+  list(REMOVE_ITEM VOTCA_XML ${NOT_VOTCA_XML})
+endif()
 install(FILES ${VOTCA_XML} DESTINATION ${CMAKE_INSTALL_DATADIR}/votca/xml)
 
 find_program(GMX_EXECUTABLE gmx_d gmx)
