cmake: add support for gmx double

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,11 @@ option(ENABLE_TESTING "Build and copy testing stuff" OFF)
 if(VOTCA_PATH AND VOTCA_SHARE AND VOTCA_CSG_INVERSE AND ENABLE_TESTING)
   enable_testing()
   find_package(MDRUN_MPI)
+  find_program(GMX_EXECUTABLE gmx_d gmx)
+  find_package_handle_standard_args(GMX REQUIRED_VARS GMX_EXECUTABLE)
+  if(NOT GMX_FOUND)
+    set(GMX_EXECUTABLE "gmx")
+  endif()
   find_package(LMP)
   set(NPROCS 4 CACHE STRING "# processes for testing")
   file(GLOB_RECURSE FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} settings.xml)
@@ -50,10 +55,9 @@ if(VOTCA_PATH AND VOTCA_SHARE AND VOTCA_CSG_INVERSE AND ENABLE_TESTING)
       set(CSG_MDRUN_STEPS 2500)
     endif()
     if(DIR MATCHES "gromacs-(multi|remd)")
-      set_property(TEST ${TESTNAME} PROPERTY ENVIRONMENT "CSG_RUNTEST=yes;VOTCASHARE=${VOTCA_SHARE};CSG_MDRUN_STEPS=${CSG_MDRUN_STEPS};PATH=${VOTCA_PATH}:$ENV{PATH}"
-	      "CSG_MDRUN_CMD=mpirun -np ${NPROCS} ${MDRUN_MPI_EXECUTABLE}")
+      set_property(TEST ${TESTNAME} PROPERTY ENVIRONMENT "CSG_RUNTEST=yes;VOTCASHARE=${VOTCA_SHARE};CSG_MDRUN_STEPS=${CSG_MDRUN_STEPS};PATH=${VOTCA_PATH}:$ENV{PATH}" "CSG_MDRUN_CMD=mpirun -np ${NPROCS} ${MDRUN_MPI_EXECUTABLE}")
     else()
-      set_tests_properties(${TESTNAME} PROPERTIES ENVIRONMENT "CSG_RUNTEST=yes;VOTCASHARE=${VOTCA_SHARE};CSG_MDRUN_STEPS=${CSG_MDRUN_STEPS};PATH=${VOTCA_PATH}:$ENV{PATH}")
+      set_property(TEST ${TESTNAME} PROPERTY ENVIRONMENT "CSG_RUNTEST=yes;VOTCASHARE=${VOTCA_SHARE};CSG_MDRUN_STEPS=${CSG_MDRUN_STEPS};PATH=${VOTCA_PATH}:$ENV{PATH}" "CSG_MDRUN_CMD=${GMX_EXECUTABLE} mdrun")
     endif()
   endforeach(DIR ${DIRS})
   message(STATUS "Use VOTCASHARE=${VOTCA_SHARE} PATH=${VOTCA_PATH} for out-of-cmake testing")
