cmake: respect VOTCA_CSG_DEFAULTS in test env

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,23 @@ set(PROJECT_VERSION "1.5-dev")
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)
 
 option(ENABLE_TESTING "Build and copy testing stuff" OFF)
-if(VOTCA_PATH AND VOTCA_SHARE AND VOTCA_CSG_INVERSE AND ENABLE_TESTING)
+if(VOTCA_PATH AND ENABLE_TESTING)
   enable_testing()
-  find_package(MDRUN_MPI)
-  find_program(GMX_EXECUTABLE gmx_d gmx)
-  find_package_handle_standard_args(GMX REQUIRED_VARS GMX_EXECUTABLE)
-  if(NOT GMX_FOUND)
-    set(GMX_EXECUTABLE "gmx")
+  foreach(prog csg_call csg_inverse)
+    string(TOUPPER "${prog}" PROG)
+    find_program(${PROG} ${prog})
+    find_package_handle_standard_args(${PROG} REQUIRED_VARS ${PROG})
+    if(NOT ${PROG}_FOUND)
+      message(FATAL_ERROR "Could not find ${prog}")
+    endif()
+  endforeach()
+  if(NOT VOTCA_SHARE)
+    execute_process(COMMAND ${CSG_CALL} --show-share OUTPUT_VARIABLE VOTCA_SHARE OUTPUT_STRIP_TRAILING_WHITESPACE)
   endif()
+  if(NOT VOTCA_CSG_DEFAULTS)
+    set(VOTCA_CSG_DEFAULTS ${VOTCA_SHARE}/xml/csg_defaults.xml)
+  endif()
+  find_package(MDRUN_MPI)
   find_package(LMP)
   set(NPROCS 4 CACHE STRING "# processes for testing")
   file(GLOB_RECURSE FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} settings.xml)
@@ -43,7 +52,7 @@ if(VOTCA_PATH AND VOTCA_SHARE AND VOTCA_CSG_INVERSE AND ENABLE_TESTING)
     endif (NOT CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
     string(REGEX REPLACE "/$" "" DIR "${DIR}")
     string(REPLACE / _ TESTNAME "${DIR}")
-    add_test(NAME ${TESTNAME} COMMAND ${VOTCA_CSG_INVERSE} --options settings.xml --do-iterations 1 WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${DIR})
+    add_test(NAME ${TESTNAME} COMMAND ${CSG_INVERSE} --options settings.xml --do-iterations 1 WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${DIR})
     # run tests for csg (to test csg) and tools (coverage) as well
     set_tests_properties(${TESTNAME} PROPERTIES LABELS "csg-tutorials;csg;tools;votca")
     set(CSG_MDRUN_STEPS 500)
@@ -55,14 +64,14 @@ if(VOTCA_PATH AND VOTCA_SHARE AND VOTCA_CSG_INVERSE AND ENABLE_TESTING)
       set(CSG_MDRUN_STEPS 2500)
     endif()
     if(DIR MATCHES "gromacs-(multi|remd)")
-      set_property(TEST ${TESTNAME} PROPERTY ENVIRONMENT "CSG_RUNTEST=yes;VOTCASHARE=${VOTCA_SHARE};CSG_MDRUN_STEPS=${CSG_MDRUN_STEPS};PATH=${VOTCA_PATH}:$ENV{PATH}" "CSG_MDRUN_CMD=mpirun -np ${NPROCS} ${MDRUN_MPI_EXECUTABLE}")
+      set_property(TEST ${TESTNAME} PROPERTY ENVIRONMENT "CSG_RUNTEST=yes;VOTCASHARE=${VOTCA_SHARE};CSG_MDRUN_STEPS=${CSG_MDRUN_STEPS};PATH=${VOTCA_PATH}:$ENV{PATH};VOTCA_CSG_DEFAULTS=${VOTCA_CSG_DEFAULTS}" "CSG_MDRUN_CMD=mpirun -np ${NPROCS} ${MDRUN_MPI_EXECUTABLE}")
     else()
-      set_property(TEST ${TESTNAME} PROPERTY ENVIRONMENT "CSG_RUNTEST=yes;VOTCASHARE=${VOTCA_SHARE};CSG_MDRUN_STEPS=${CSG_MDRUN_STEPS};PATH=${VOTCA_PATH}:$ENV{PATH}" "CSG_MDRUN_CMD=${GMX_EXECUTABLE} mdrun")
+      set_property(TEST ${TESTNAME} PROPERTY ENVIRONMENT "CSG_RUNTEST=yes;VOTCASHARE=${VOTCA_SHARE};CSG_MDRUN_STEPS=${CSG_MDRUN_STEPS};PATH=${VOTCA_PATH}:$ENV{PATH};VOTCA_CSG_DEFAULTS=${VOTCA_CSG_DEFAULTS}")
     endif()
   endforeach(DIR ${DIRS})
-  message(STATUS "Use VOTCASHARE=${VOTCA_SHARE} PATH=${VOTCA_PATH} for out-of-cmake testing")
+  message(STATUS "Use VOTCASHARE=${VOTCA_SHARE} PATH=${VOTCA_PATH} VOTCA_CSG_DEFAULTS=${VOTCA_CSG_DEFAULTS} for out-of-cmake testing")
 elseif(ENABLE_TESTING)
-  message(FATAL_ERROR "We need VOTCA_PATH, VOTCA_SHARE and VOTCA_CSG_INVERSE set for testing!")
+  message(FATAL_ERROR "We need VOTCA_PATH set for testing!")
 endif()
 
 include(GNUInstallDirs)
