--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,10 +63,10 @@ set(VOTCA_TOOLS_INCLUDE_DIR
 add_subdirectory(csg)
 list(APPEND DOXYGEN_PACKAGES csg)
 set(VOTCA_SHARE ${CMAKE_SOURCE_DIR}/csg/share)
-set(VOTCA_CSG_INVERSE ${CMAKE_BINARY_DIR}/csg/scripts/csg_inverse)
+set(CSG_INVERSE ${CMAKE_BINARY_DIR}/csg/scripts/csg_inverse)
 set(CSG_CALL ${CMAKE_BINARY_DIR}/csg/scripts/csg_call)
-set(CSG_INVERSE ${VOTCA_CSG_INVERSE})
 set(VOTCA_PATH "${CMAKE_BINARY_DIR}/csg/scripts:${CMAKE_BINARY_DIR}/csg/src/tools")
+set(VOTCA_CSG_DEFAULTS ${CMAKE_BINARY_DIR}/csg/share/xml/csg_defaults.xml)
 add_subdirectory(csg-tutorials)
 if(BUILD_CSG_MANUAL)
   add_subdirectory(csg-manual)
