cmake: fix csg_defaults.xml install

--- a/share/xml/CMakeLists.txt
+++ b/share/xml/CMakeLists.txt
@@ -18,4 +18,4 @@ set(GROMPP "${GMX_EXECUTABLE} grompp")
 set(G_TRJCAT "${GMX_EXECUTABLE} trjcat")
 
 configure_file(${CSG_DEFAULTS}.in ${CMAKE_CURRENT_BINARY_DIR}/${CSG_DEFAULTS} @ONLY)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CSG_DEFAULTS} DESTINATION ${DATA}/xml)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CSG_DEFAULTS} DESTINATION ${CMAKE_INSTALL_DATADIR}/votca/xml)
