--- a/scripts/csg_inverse.in
+++ b/scripts/csg_inverse.in
@@ -66,7 +66,7 @@ fi
 
 if [[ -f ${VOTCASHARE}/scripts/inverse/inverse.sh ]]; then
   pre="$*"
-  [[ -n $pre && -z ${pre//*--debug*} ]] && pre="bash -x " || pre=""
+  [[ -n $pre && -z ${pre//*--debug*} ]] && pre="${BASH} -x " || pre=""
   exec ${pre} ${VOTCASHARE}/scripts/inverse/inverse.sh "$@"
   exit 0
 else
