--- a/share/xml/csg_defaults.xml.in
+++ b/share/xml/csg_defaults.xml.in
@@ -169,6 +169,9 @@
         <command>@MDRUN@
           <DESC>Command to run mdrun (name or absolute path or mpirun mdrun..)</DESC>
         </command>
+        <multidir>
+          <DESC> List of directories for multidir simulations</DESC>
+        </multidir>
         <opts>
           <DESC> Additional options to Gromacs mdrun (e.g. -nosum)</DESC>
         </opts>
