Removed excess run_ abbreviation from test in CMakeLists.txt file

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -6,8 +6,8 @@ if(ENABLE_TESTING)
     add_executable(unit_${PROG} ${${PROG}_SOURCES})
     target_link_libraries(unit_${PROG} votca_tools)
 
-    add_test(run_unit_${PROG} unit_${PROG})
+    add_test(unit_${PROG} unit_${PROG})
     # run tests for tools (for coverage) as well
-    set_tests_properties(run_unit_${PROG} PROPERTIES LABELS "tools;votca")
+    set_tests_properties(unit_${PROG} PROPERTIES LABELS "tools;votca")
   endforeach(PROG)
 endif(ENABLE_TESTING)
