Changed line about Boost test dynamic link

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,11 +1,10 @@
 
 if(ENABLE_TESTING)
   foreach(PROG test_elements )
-    ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK) 
     file(GLOB ${PROG}_SOURCES ${PROG}*.cc)
     add_executable(unit_${PROG} ${${PROG}_SOURCES})
     target_link_libraries(unit_${PROG} votca_tools)
-
+    target_compile_definitions(unit_${PROG} PRIVATE BOOST_TEST_DYN_LINK)
     add_test(unit_${PROG} unit_${PROG})
     # run tests for tools (for coverage) as well
     set_tests_properties(unit_${PROG} PROPERTIES LABELS "tools;votca")
