add dox pages to doxygen

--- a/share/doc/CMakeLists.txt
+++ b/share/doc/CMakeLists.txt
@@ -5,6 +5,8 @@ foreach(DIR ${DOXYGEN_PACKAGES})
   file(GLOB_RECURSE ${DIR}_SOURCES ${ABS_DIR}/*.cc ${ABS_DIR}/*.h)
   list(APPEND DOXYGEN_SOURCES ${${DIR}_SOURCES})
 endforeach()
+file(GLOB EXTRA_DOXYGEN_PAGES ${CMAKE_CURRENT_SOURCE_DIR}/*.dox)
+list(APPEND DOXYGEN_SOURCES ${EXTRA_DOXYGEN_PAGES})
 string(REPLACE ";" " " INPUT_SOURCES "${DOXYGEN_SOURCES}")
 configure_file(Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
 add_custom_target(doxygen DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/html/index.html)
