doxygen: pull in dox/guide pages from module (incl. csg-tutorials

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ set(CSG_CALL ${CMAKE_BINARY_DIR}/csg/scripts/csg_call)
 set(VOTCA_PATH "${CMAKE_BINARY_DIR}/csg/scripts:${CMAKE_BINARY_DIR}/csg/src/tools")
 set(VOTCA_CSG_DEFAULTS ${CMAKE_BINARY_DIR}/csg/share/xml/csg_defaults.xml)
 add_subdirectory(csg-tutorials)
+list(APPEND DOXYGEN_PACKAGES csg-tutorials)
 if(BUILD_CSG_MANUAL)
   add_subdirectory(csg-manual)
   add_dependencies(csg-manual_dvi csg_call_build csg_inverse_build)
