--- a/share/doc/CMakeLists.txt
+++ b/share/doc/CMakeLists.txt
@@ -2,7 +2,8 @@ set(DOXYGEN_SOURCES)
 foreach(DIR ${DOXYGEN_PACKAGES})
   set(ABS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../${DIR})
   set(INPUT_DIRS "${INPUT_DIRS} ${ABS_DIR}")
-  file(GLOB_RECURSE ${DIR}_SOURCES ${ABS_DIR}/*.cc ${ABS_DIR}/*.h)
+  file(GLOB_RECURSE ${DIR}_SOURCES ${ABS_DIR}/*.cc ${ABS_DIR}/*.h
+         ${ABS_DIR}/*.dox ${ABS_DIR}/guide/*.md)
   list(APPEND DOXYGEN_SOURCES ${${DIR}_SOURCES})
 endforeach()
 file(GLOB EXTRA_DOXYGEN_PAGES ${CMAKE_CURRENT_SOURCE_DIR}/*.dox)
