--- a/share/doc/CMakeLists.txt
+++ b/share/doc/CMakeLists.txt
@@ -6,7 +6,7 @@ foreach(DIR ${DOXYGEN_PACKAGES})
          ${ABS_DIR}/*.dox ${ABS_DIR}/guide/*.md)
   list(APPEND DOXYGEN_SOURCES ${${DIR}_SOURCES})
 endforeach()
-file(GLOB EXTRA_DOXYGEN_PAGES ${CMAKE_CURRENT_SOURCE_DIR}/*.dox)
+file(GLOB EXTRA_DOXYGEN_PAGES ${CMAKE_CURRENT_SOURCE_DIR}/*.md ${CMAKE_SOURCE_DIR}/*.md)
 list(APPEND DOXYGEN_SOURCES ${EXTRA_DOXYGEN_PAGES})
 string(REPLACE ";" " " INPUT_SOURCES "${DOXYGEN_SOURCES}")
 configure_file(Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
