cmake: add format rule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,20 +55,20 @@ endif(MKL_FOUND)
 # Include the following subdirectory # 
 ######################################
 add_subdirectory(tools)
-set(DOXYGEN_PACKAGES tools)
+set(ENABLED_VOTCA_PACKAGES tools)
 set(VOTCA_TOOLS_LIBRARY votca_tools CACHE STRING "tools library name")
 set(VOTCA_TOOLS_INCLUDE_DIR
   "${CMAKE_CURRENT_SOURCE_DIR}/tools/include;${CMAKE_CURRENT_BINARY_DIR}/tools/include;${MKL_BOOST_INCLUDE_DIR}"
   CACHE PATH "tools include path")
 add_subdirectory(csg)
-list(APPEND DOXYGEN_PACKAGES csg)
+list(APPEND ENABLED_VOTCA_PACKAGES csg)
 set(VOTCA_SHARE ${CMAKE_SOURCE_DIR}/csg/share)
 set(CSG_INVERSE ${CMAKE_BINARY_DIR}/csg/scripts/csg_inverse)
 set(CSG_CALL ${CMAKE_BINARY_DIR}/csg/scripts/csg_call)
 set(VOTCA_PATH "${CMAKE_BINARY_DIR}/csg/scripts:${CMAKE_BINARY_DIR}/csg/src/tools")
 set(VOTCA_CSG_DEFAULTS ${CMAKE_BINARY_DIR}/csg/share/xml/csg_defaults.xml)
 add_subdirectory(csg-tutorials)
-list(APPEND DOXYGEN_PACKAGES csg-tutorials)
+list(APPEND ENABLED_VOTCA_PACKAGES csg-tutorials)
 if(BUILD_CSG_MANUAL)
   add_subdirectory(csg-manual)
   add_dependencies(csg-manual_dvi csg_call_build csg_inverse_build)
@@ -78,31 +78,32 @@ set(VOTCA_CSG_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/csg/include
 	CACHE PATH "csg include path")
 if(BUILD_CSGAPPS)
   add_subdirectory(csgapps)
-  list(APPEND DOXYGEN_PACKAGES csgapps)
+  list(APPEND ENABLED_VOTCA_PACKAGES csgapps)
 endif()
 if(BUILD_CTP)
   add_subdirectory(kmc)
-  list(APPEND DOXYGEN_PACKAGES kmc)
+  list(APPEND ENABLED_VOTCA_PACKAGES kmc)
   add_subdirectory(moo)
-  list(APPEND DOXYGEN_PACKAGES moo)
+  list(APPEND ENABLED_VOTCA_PACKAGES moo)
   set(VOTCA_MOO_LIBRARY votca_moo CACHE STRING "moo library name")
   set(VOTCA_MOO_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/moo/include
 	  CACHE PATH "moo include path")
   add_subdirectory(ctp)
-  list(APPEND DOXYGEN_PACKAGES ctp)
+  list(APPEND ENABLED_VOTCA_PACKAGES ctp)
   set(VOTCA_CTP_LIBRARY votca_ctp CACHE STRING "ctp library name")
   set(VOTCA_CTP_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ctp/include
 	  CACHE PATH "ctp include path")
 endif()
 if(BUILD_XTP)
   add_subdirectory(xtp)
-  list(APPEND DOXYGEN_PACKAGES xtp)
+  list(APPEND ENABLED_VOTCA_PACKAGES xtp)
 endif()
 
 find_package(Doxygen)
 if (DOXYGEN_FOUND AND DOXYGEN_DOT_FOUND)
   add_subdirectory(share/doc)
 endif()
+add_subdirectory(share/format)
 
 include(FeatureSummary)
 feature_summary(INCLUDE_QUIET_PACKAGES WHAT ALL)
