--- a/share/doc/CMakeLists.txt
+++ b/share/doc/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(DOXYGEN_SOURCES)
-foreach(DIR ${DOXYGEN_PACKAGES})
+foreach(DIR ${ENABLED_VOTCA_PACKAGES})
   set(ABS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../${DIR})
   set(INPUT_DIRS "${INPUT_DIRS} ${ABS_DIR}")
   file(GLOB_RECURSE ${DIR}_SOURCES ${ABS_DIR}/*.cc ${ABS_DIR}/*.h
