Add HDF5 CPP cmake search, include, linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,9 +31,9 @@ enable_language(CXX)
 
 include(CheckCXXCompilerFlag)
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON) 
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF) #...without compiler extensions like gnu++11
-if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel" AND CMAKE_VERSION VERSION_LESS "3.6.0") 
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel" AND CMAKE_VERSION VERSION_LESS "3.6.0")
 message(FATAL_ERROR "Using the intel compiler requires cmake 3.6 or higher")
 endif()
 
@@ -76,6 +76,20 @@ if(GSL_FOUND)
   include_directories(${GSL_INCLUDE_DIRS})
   set(GSL_PKG "gsl")
   set(GSL TRUE)
+endif()
+
+
+find_package(HDF5 1.8 COMPONENTS CXX)
+
+if(HDF5_FOUND)
+  message("-- HDF5 found for checkpointing")
+  message("   Version " + ${HDF5_VERSION})
+  include_directories(${HDF5_INCLUDE_DIRS})
+
+  if (${HDF5_VERSION} GREATER 1.8)
+    message(WARNING "HDF5 will be used compatible with version 1.8.")
+  endif()
+
 endif()
 
 
