--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,12 +58,8 @@ endif()
 add_definitions(-DGWBSE_DOUBLE=${GWBSE_DOUBLE_VALUE})
 
 
-find_package(Eigen REQUIRED)
+find_package(Eigen 3.3.0 REQUIRED)
 if (EIGEN3_FOUND)
- if (EIGEN3_VERSION VERSION_LESS 3.3.0)
-    message(FATAL_ERROR "-- VOTCA-XTP requires Eigen version >= 3.3.0 detected version of Eigen is: ${EIGEN3_VERSION}")
-endif (EIGEN3_VERSION VERSION_LESS 3.3.0)
-   message("-- Found Eigen version ${EIGEN3_VERSION}: ${EIGEN3_INCLUDE_DIRS}")	
   include_directories(${EIGEN3_INCLUDE_DIRS})
 endif (EIGEN3_FOUND)
 
