cmake: disable methanol-water tests (#19)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,9 @@ if(VOTCA_PATH AND ENABLE_TESTING)
     if(DIR MATCHES "(espresso|dlpoly|hoomd|atomistic|single_chain)")
       continue()
     endif()
+    if(DIR MATCHES "methanol-water") #issue #19
+      continue()
+    endif()
     if(NOT MDRUN_MPI_FOUND AND DIR MATCHES "gromacs-(multi|remd)")
       continue()
     endif()
