--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,5 +1,14 @@
 find_package(Boost 1.39.0 REQUIRED COMPONENTS unit_test_framework)
-foreach(PROG test_elements test_edge_base test_identity test_name test_typeconverter test_graphnode test_edgecontainer)
+list(APPEND test_cases test_edge_base)
+list(APPEND test_cases test_edgecontainer)
+list(APPEND test_cases test_elements)
+list(APPEND test_cases test_graphnode)
+list(APPEND test_cases test_histogramnew)
+list(APPEND test_cases test_identity)
+list(APPEND test_cases test_name)
+list(APPEND test_cases test_table)
+list(APPEND test_cases test_typeconverter)
+foreach(PROG ${test_cases})
   file(GLOB ${PROG}_SOURCES ${PROG}*.cc)
   add_executable(unit_${PROG} ${${PROG}_SOURCES})
   target_link_libraries(unit_${PROG} votca_tools ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
